# polymesh-api

./: Cargo.toml  README.md  download_metadata.sh  rust-toolchain.toml
.github/workflows/: ink.yml  rust.yml  web.yml
codegen/: Cargo.toml
codegen/examples/: dump_codegen.rs  polymesh.rs  polymesh_api.rs  test_api.rs
codegen/src/: generate.rs
crates/polymesh-api-client/: Cargo.toml
crates/polymesh-api-client-extras/: Cargo.toml
crates/polymesh-api-client-extras/src/: lib.rs  user.rs
crates/polymesh-api-client/examples/: compare_storage_metadata.rs  download_metadata.rs  dump_blocks.rs  dump_metadata_type_defs.rs  dump_schema_type_defs.rs
crates/polymesh-api-client/schemas/: init_types.json  init_v14_types.json
crates/polymesh-api-client/schemas/polymesh/: 3001.json  3002.json  5000001.json  5000002.json  5001002.json
crates/polymesh-api-client/src/: basic_types.rs  block.rs  client.rs  error.rs  lib.rs  lockable_signer.rs  metadata.rs  rpc.rs  schema.rs  serde_impl.rs  signer.rs  storage.rs  transaction.rs  type_codec.rs  type_def.rs
crates/polymesh-api-client/src/metadata/: storage.rs
crates/polymesh-api-client/src/type_codec/: de.rs
crates/polymesh-api-codegen/: Cargo.toml  dump_codegen.sh  test_api_codegen.sh
crates/polymesh-api-codegen-macro/: Cargo.toml
crates/polymesh-api-codegen-macro/src/: lib.rs
crates/polymesh-api-codegen/examples/: dump_codegen.rs  polymesh.rs  test_api.rs
crates/polymesh-api-codegen/examples/test_api/: main.rs  polymesh.rs
crates/polymesh-api-codegen/src/: generate.rs
crates/polymesh-api-ink/: Cargo.toml
crates/polymesh-api-ink/src/: basic_types.rs  block.rs  chain_api.rs  error.rs  extension.rs  hashing.rs  lib.rs  mod.rs
crates/polymesh-api-tester/: .env  .gitignore  Cargo.toml
crates/polymesh-api-tester/.sqlx/: query-3b6dde8f8a3f67635c5d4b6079447e206a346499321ba14b9198bdede4ebb4af.json  query-651ba8a9fb491d0ad217262521ff26a20b4bb28a981f71f6d6f443180919869e.json  query-80a3b28d87fcd33aae8987dd02edf4f221857680d34c9c1c2afbb1a253dbc30d.json  query-c84d7fee185984829c841be4cee9e01cb598e6296c18da1a79a37119734c298c.json
crates/polymesh-api-tester/migrations/: 20231003124958_accounts_table.sql
crates/polymesh-api-tester/src/: account.rs  db.rs  error.rs  lib.rs  tester.rs
crates/polymesh-api-tester/tests/: create_secondary_keys.rs  create_venue.rs  simple_transfer.rs
crates/polymesh-offline-signer/: Cargo.toml  README.md
crates/polymesh-offline-signer/src/: main.rs
docs/: POLYMESH_RELEASE.md
examples/: download_metadata.rs  dump_metadata_type_defs.rs  dump_schema_type_defs.rs  dump_types.rs  test_api.rs
examples/add_secondary_keys_with_auth/: Cargo.toml  README.md
examples/add_secondary_keys_with_auth/src/: main.rs
examples/create_users/: Cargo.toml
examples/create_users/src/: main.rs
examples/creating_asset/: cargo.toml
examples/creating_asset/src/: main.rs
examples/dump_blocks/: Cargo.toml  schemas
examples/dump_blocks/src/: dump_blocks_current_runtime.rs  main.rs
examples/get_authorizations/: Cargo.toml
examples/get_authorizations/src/: main.rs
examples/runtime-tester/: Cargo.toml  lib.rs  rust-toolchain.toml
examples/settlements/: Cargo.toml  README.md  lib.rs  rust-toolchain.toml
examples/simple_transfer/: Cargo.toml
examples/simple_transfer/src/: main.rs
examples/subscribe_blocks/: Cargo.toml
examples/subscribe_blocks/src/: main.rs
examples/subxt-transfer/: Cargo.toml
examples/subxt-transfer/src/: main.rs  polymesh_metadata.scale
examples/test_api/: Cargo.toml
examples/test_api/src/: main.rs
macro/: Cargo.toml
macro/src/: lib.rs
polymesh-api/: Cargo.toml
polymesh-api/src/: lib.rs
schemas/: init_types.json
src/: basic_types.rs  block.rs  client.rs  error.rs  lib.rs  rpc.rs  schema.rs  signer.rs  transaction.rs  type_def.rs  v5_to_v6.rs
