[package]
name = "polymesh-api"
version = "2.0.1"
edition = "2021"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
license = "Apache-2.0"
description = "Polymesh Rust API"
keywords = ["polymesh", "blockchain", "substrate", "codegen"]
repository = "https://github.com/PolymeshAssociation/polymesh-api"
homepage = "https://github.com/PolymeshAssociation/polymesh-api"

[workspace]
members = [
  "crates/polymesh-api-codegen-macro",
  "crates/polymesh-api-codegen",
  "crates/polymesh-api-client",
  "crates/polymesh-api-client-extras",
  "crates/polymesh-api-ink",

  "examples/simple_transfer",
  "examples/add_secondary_keys_with_auth",
  "examples/subscribe_blocks",
  "examples/test_api",
  "examples/dump_blocks",
]

[dependencies]
thiserror = "1.0"
log = "0.4"

serde_json = { version = "1.0", features = ["preserve_order", "arbitrary_precision"], optional = true }
serde = { version = "1.0", optional = true }

polymesh-api-codegen-macro = { version = "2.0.1", path = "crates/polymesh-api-codegen-macro", default-features = false }
polymesh-api-client = { version = "2.0.0", path = "crates/polymesh-api-client", optional = true, default-features = false }

# For Ink! Smart Contract support.
polymesh-api-ink = { version = "0.4.2", path = "crates/polymesh-api-ink", optional = true, default-features = false }
ink_primitives = { version = "3.0", optional = true, default-features = false }
ink_metadata = { version = "3.0", optional = true, default-features = false, features = ["derive"] }
ink_env = { version = "3.0", optional = true, default-features = false }
ink_storage = { version = "3.0", optional = true, default-features = false }
ink_lang = { version = "3.0", optional = true, default-features = false }
ink_lang_codegen = { version = "3.0", optional = true, default-features = false }

# substrate
sp-arithmetic = { version = "16.0", default-features = false }
codec = { version = "3", package = "parity-scale-codec", default-features = false }
scale-info = { version = "2.3", default-features = false, optional = true }

# RPC Client needs these.
lazy_static = { version = "1.4.0", optional = true }
async-trait = { version = "0.1", optional = true }
serde-big-array = { version = "0.4.1", optional = true }

[dev-dependencies]
anyhow = "1"
log = "0.4"
hex = "0.4"
dotenv = "0.15"
env_logger = "0.9"

tokio = { version = "1.19", features = ["rt"] }

[features]
default = [ "std", "rpc", "serde", "v14" ]

polymesh_v5 = []

# Download the chain metadata from a RPC node.
download_metadata = [
  "polymesh-api-codegen-macro/download_metadata",
]

rpc = [
  "async-trait",
  "lazy_static",
  "polymesh-api-client",
]

v14 = [
  "polymesh-api-codegen-macro/v14",
  "polymesh-api-client/v14",
]

ink = [
  "polymesh-api-codegen-macro/v14",
  "polymesh-api-ink",
  "polymesh-api-codegen-macro/ink",
  "polymesh-api-codegen-macro/no_std",
  "ink_primitives",
  "ink_env",
  "ink_storage",
  "ink_lang",
  "ink_lang_codegen",
  "type_info",
]

type_info = [
  "scale-info",
  "polymesh-api-client?/type_info",
]

wasm = [
  "v14",
	"rpc",
  "polymesh-api-codegen-macro/no_std",
  "polymesh-api-client/wasm",
]

serde = [
  "dep:serde",
  "sp-arithmetic/serde",
  "polymesh-api-client/serde",
  "serde-big-array",
	"codec/serde",
]

std = [
  "sp-arithmetic/std",
  "polymesh-api-codegen-macro/std",
  "polymesh-api-client?/std",
  "polymesh-api-ink?/std",
  "scale-info?/std",
  "ink_primitives?/std",
  "ink_metadata/std",
  "ink_env?/std",
  "ink_storage?/std",
]
