[package]
name = "codegen"
version = "0.1.0"
edition = "2021"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
license = "Apache-2.0"
description = "Substrate Rust API Codgen"
keywords = ["blockchain", "substrate", "codegen"]
repository = "https://github.com/PolymeshAssociation/sub-api"
homepage = "https://github.com/PolymeshAssociation/sub-api"

[dependencies]
thiserror = "1.0.31"
log = "0.4"
hex = "0.4"

anyhow = "1"
heck = "0.4"

proc-macro2 = "1"
quote = "1"

serde_json = { version = "1.0", features = ["preserve_order"] }
serde = "1.0"

# substrate
sp-core = { version = "6.0", default-features = false }
sp-version = { version = "5.0", default-features = false }
sp-runtime = { version = "6.0", default-features = false }
frame-support = { version = "4.0.0-dev", default-features = false }
frame-metadata = { version = "15.0.0", default-features = false }
codec = { version = "3", package = "parity-scale-codec", default-features = false }
scale-info = { version = "2", default-features = false }

[dev-dependencies]
anyhow = "1"
log = "0.4"
dotenv = "0.15"
env_logger = "0.9"

tokio = { version = "1.19", features = ["full"] }
sub-api = { version = "0.1", path = "../" }
rustfmt-wrapper = "0.2.0"

[features]
default = [ "std", "v12", "v13", "v14" ]

v12 = ["frame-metadata/v12"]
v13 = ["frame-metadata/v13"]
v14 = ["frame-metadata/v14"]

std = [
	"frame-support/std",
	"frame-metadata/std",
	"sp-core/std",
	"sp-version/std",
	"sp-runtime/std",
	"scale-info/std",
]
