[package]
name = "polymesh-api"
version = "0.1.0"
edition = "2021"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
license = "Apache-2.0"
description = "Polymesh Rust API"
keywords = ["polymesh", "blockchain", "substrate", "codegen"]
repository = "https://github.com/PolymeshAssociation/sub-api"
homepage = "https://github.com/PolymeshAssociation/sub-api"

[dependencies]
thiserror = "1.0"
log = "0.4"

sub-api-macro = { version = "0.1", path = "../macro/" }
sub-api = { version = "0.1", path = "../" }

serde = "1.0"

# substrate
sp-arithmetic = { version = "5.0", default-features = false }
codec = { version = "3", package = "parity-scale-codec", default-features = false }
lazy_static = "1.4.0"
async-trait = "0.1"
serde-big-array = "0.4.1"

[features]
default = [ "std", "serde" ]

serde = [
	"sp-arithmetic/serde",
]

std = [
	"sp-arithmetic/std",
]
