[package]
name = "polymesh-api-client-extras"
version = "2.0.1"
edition = "2021"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
license = "Apache-2.0"
description = "Polymesh API client extras"
keywords = ["polymesh", "blockchain", "substrate", "codegen"]
repository = "https://github.com/PolymeshAssociation/polymesh-api"
homepage = "https://github.com/PolymeshAssociation/polymesh-api"

[dependencies]
polymesh-api = { path = "../../", default-features = false, features = ["rpc", "v14"] }

serde_json = { workspace = true, features = ["preserve_order"] }
serde = { workspace = true }

# substrate
codec = { version = "3", package = "parity-scale-codec", default-features = false }

[features]
default = [ "std", "serde" ]

serde = [
  "polymesh-api/serde",
]

std = [
  "polymesh-api/std",
]
