[package]
name = "polymesh-api-client-extras"
version = "3.3.0"
edition = "2021"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
license = "Apache-2.0"
description = "Polymesh API client extras"
keywords = ["polymesh", "blockchain", "substrate", "codegen"]
repository = "https://github.com/PolymeshAssociation/polymesh-api"
homepage = "https://github.com/PolymeshAssociation/polymesh-api"

[dependencies]
polymesh-api = { workspace = true, default-features = false, features = ["rpc", "v14"] }

tokio = { version = "1.19", default-features = false, features = ["rt"] }

serde_json = { workspace = true, features = ["preserve_order"] }
serde = { workspace = true }

# substrate
codec = { version = "3", package = "parity-scale-codec", default-features = false }

[features]
default = [ "std", "serde", "v6" ]

v6 = []
v7 = []

serde = [
  "polymesh-api/serde",
]

std = [
  "polymesh-api/std",
]
