[package]
name = "polymesh-api-client-extras"
version = "3.4.2"
edition = "2021"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
license = "Apache-2.0"
description = "Polymesh API client extras"
keywords = ["polymesh", "blockchain", "substrate", "codegen"]
repository = "https://github.com/PolymeshAssociation/polymesh-api"
homepage = "https://github.com/PolymeshAssociation/polymesh-api"

[dependencies]
polymesh-api = { workspace = true, default-features = false, features = ["rpc", "v14"] }

tokio = { version = "1.19", default-features = false, features = ["rt"] }

serde_json = { workspace = true, features = ["preserve_order"] }
serde = { workspace = true }

# substrate
codec = { version = "3", package = "parity-scale-codec", default-features = false }

[features]
default = [ "std", "serde", "polymesh_v6" ]

polymesh_v6 = ["polymesh-api/polymesh_v6"]
polymesh_v7 = ["polymesh-api/polymesh_v7"]

serde = [
  "polymesh-api/serde",
]

std = [
  "polymesh-api/std",
]
