[package]
name = "polymesh-api-client"
version = "1.0.1"
edition = "2021"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
license = "Apache-2.0"
description = "Polymesh API client core"
keywords = ["polymesh", "blockchain", "substrate", "codegen"]
repository = "https://github.com/PolymeshAssociation/polymesh-api"
homepage = "https://github.com/PolymeshAssociation/polymesh-api"

[dependencies]
thiserror = "1.0.31"
log = "0.4"
hex = { version = "0.4", default-features = false, features = ["alloc"] }

http = { version = "0.2.8" }

serde_json = { version = "1.0", features = ["preserve_order", "arbitrary_precision"] }
serde = { version = "1.0" }
impl-serde = { version = "0.3.1", default-features = false, optional = true }
serde-big-array = { version = "0.4.1", optional = true }

# substrate
sp-core = { version = "7.0", default-features = false }
sp-runtime = { version = "7.0", default-features = false }
sp-weights = { version = "4.0", default-features = false }
sp-arithmetic = { version = "9.0", default-features = false }
frame-metadata = { version = "15.0.0", default-features = false }
codec = { version = "3", package = "parity-scale-codec", default-features = false }
scale-info = { version = "=2.3", default-features = false, optional = true }
lazy_static = { version = "1.4.0" }
async-trait = { version = "0.1" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.19", features = ["full"] }
jsonrpsee = { version = "0.14", features = ["client"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
jsonrpsee = { version = "0.14", features = ["wasm-client"] }

sp-application-crypto = { version = "7.0", default-features = false }
sp-io = { version = "7.0", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator"] }

[dev-dependencies]
anyhow = "1"
dotenv = "0.15"
env_logger = "0.9"

[features]
default = [ "std", "serde", "v12", "v13", "v14" ]

wasm = [
  "v14",
  "sp-application-crypto/full_crypto",
]

type_info = [
  "scale-info"
]

serde = [
  "impl-serde",
  "serde-big-array",
  "sp-core/serde",
  "sp-runtime/serde",
  "sp-arithmetic/serde",
  "sp-application-crypto/serde"
]

v12 = ["frame-metadata/v12"]
v13 = ["frame-metadata/v13"]
v14 = ["frame-metadata/v14"]

std = [
  "codec/std",
  "frame-metadata/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-weights/std",
  "sp-arithmetic/std",
  "scale-info/std",
]
