[package]
name = "polymesh-api-client"
version = "2.2.0"
edition = "2021"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
license = "Apache-2.0"
description = "Polymesh API client core"
keywords = ["polymesh", "blockchain", "substrate", "codegen"]
repository = "https://github.com/PolymeshAssociation/polymesh-api"
homepage = "https://github.com/PolymeshAssociation/polymesh-api"

[dependencies]
thiserror = "1.0.31"
log = "0.4"
hex = { version = "0.4", default-features = false, features = ["alloc"] }

async-trait = { version = "0.1" }

http = { version = "0.2.8" }

serde_json = { version = "1.0", features = ["preserve_order", "arbitrary_precision"] }
serde = { version = "1.0" }
impl-serde = { version = "0.3.1", default-features = false, optional = true }
serde-big-array = { version = "0.4.1", optional = true }

# substrate
sp-core = { version = "21.0", default-features = false }
sp-std = { version = "8.0", default-features = false }
primitive-types = { version = "0.12.0", default-features = false, features = ["codec"] }
sp-runtime = { version = "24.0", default-features = false }
sp-weights = { version = "20.0", default-features = false }
sp-arithmetic = { version = "16.0", default-features = false }
frame-metadata = { version = "15.0.0", default-features = false }
codec = { version = "3", package = "parity-scale-codec", default-features = false }
scale-info = { version = "2.3", default-features = false, optional = true }

subxt-signer = { version = "0.31", default-features = false, features = ["sr25519", "ecdsa"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.19", features = ["full"] }
jsonrpsee = { version = "0.20", default-features = false, features = ["client"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["rt"] }
jsonrpsee = { version = "0.20", default-features = false, features = ["wasm-client"] }

sp-application-crypto = { version = "23.0", default-features = false }
sp-io = { version = "23.0", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator"] }

[dev-dependencies]
anyhow = "1"
dotenv = "0.15"
env_logger = "0.9"

frame-metadata = { version = "15.0.0", default-features = false, features = ["v14"] }

[features]
default = [ "std", "serde", "v12", "v13", "v14" ]

wasm = [
  "v14",
  "sp-application-crypto/full_crypto",
	"subxt-signer/web",
]

type_info = [
  "scale-info",
  "serde",
  "primitive-types/scale-info"
]

serde = [
  "impl-serde",
  "serde-big-array",
  "sp-core/serde",
  "sp-core/impl-serde",
  "sp-weights/serde",
  "primitive-types/impl-serde",
  "sp-arithmetic/serde",
  "sp-application-crypto/serde"
]

v12 = ["frame-metadata/v12"]
v13 = ["frame-metadata/v13"]
v14 = ["frame-metadata/v14"]

std = [
  "codec/std",
  "frame-metadata/std",
  "sp-core/std",
  "sp-std/std",
  "sp-runtime/std",
  "sp-weights/std",
  "sp-arithmetic/std",
  "scale-info/std",
]
