[package]
name = "polymesh-api-client"
version = "3.7.1"
edition = "2021"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
license = "Apache-2.0"
description = "Polymesh API client core"
keywords = ["polymesh", "blockchain", "substrate", "codegen"]
repository = "https://github.com/PolymeshAssociation/polymesh-api"
homepage = "https://github.com/PolymeshAssociation/polymesh-api"

[dependencies]
thiserror = "1.0.31"
log = "0.4"
hex = { version = "0.4", default-features = false, features = ["alloc"] }

futures-core = { version = "0.3", default-features = false }
async-stream = { version = "0.3" }
async-trait = { workspace = true }

http = { version = "0.2.8" }

serde_json = { workspace = true, features = ["preserve_order", "arbitrary_precision"] }
serde = { workspace = true }
impl-serde = { workspace = true, default-features = false, optional = true }
serde-big-array = { workspace = true, optional = true }

# substrate
codec = { version = "3", package = "parity-scale-codec", default-features = false }
frame-metadata = { workspace = true, default-features = false }
primitive-types = { workspace = true, default-features = false, features = ["codec"] }
scale-info = { workspace = true, default-features = false, optional = true }
sp-arithmetic = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-weights = { workspace = true, default-features = false }

subxt-signer = { workspace = true, default-features = false, features = ["sr25519", "ecdsa"] }

utoipa = { version = "4.1", optional = true, default-features = false }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.19", features = ["full"] }
jsonrpsee = { version = "0.20", default-features = false, features = ["client"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["rt"] }
jsonrpsee = { version = "0.20", default-features = false, features = ["wasm-client"] }

sp-application-crypto = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator"] }

[dev-dependencies]
anyhow = "1"
dotenv = "0.15"
env_logger = "0.9"

lazy_static = "1.4.0"

frame-metadata = { workspace = true, default-features = false, features = ["v14"] }

[features]
default = [ "std", "serde", "type_info", "v12", "v13", "v14" ]

wasm = [
  "v14",
  "sp-application-crypto/full_crypto",
	"subxt-signer/web",
]

type_info = [
  "scale-info",
  "serde",
  "primitive-types/scale-info"
]

serde = [
  "impl-serde",
  "serde-big-array",
  "hex/serde",
  "sp-core/serde",
  "sp-core/impl-serde",
  "sp-weights/serde",
  "primitive-types/impl-serde",
  "sp-arithmetic/serde",
  "sp-runtime/serde",
  "sp-application-crypto/serde"
]

v12 = ["frame-metadata/v12"]
v13 = ["frame-metadata/v13"]
v14 = ["frame-metadata/v14"]

std = [
  "codec/std",
  "frame-metadata/std",
  "sp-core/std",
  "sp-std/std",
  "sp-runtime/std",
  "sp-weights/std",
  "sp-arithmetic/std",
  "scale-info/std",
	"subxt-signer/native",
]
