[package]
name = "polymesh-api-codegen-macro"
version = "1.1.0"
edition = "2021"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
license = "Apache-2.0"
description = "Polymesh API Codegen macro"
keywords = ["polymesh", "blockchain", "substrate", "codegen"]
repository = "https://github.com/PolymeshAssociation/polymesh-api"
homepage = "https://github.com/PolymeshAssociation/polymesh-api"

[lib]
proc-macro = true

[dependencies]
tokio = { version = "1", features = ["full"] }

darling = "0.14.1"
proc-macro-error = "1"
syn = "1.0.96"

polymesh-api-codegen = { version = "1.1.0", path = "../polymesh-api-codegen", default-features = false }
polymesh-api-client = { version = "1.0.2", path = "../polymesh-api-client", default-features = false, optional = true }

codec = { version = "3", package = "parity-scale-codec", default-features = false }

[features]
default = [ "std", "v14" ]

# Support downloading chain metadata from a RPC node.
download_metadata = [
  "polymesh-api-client",
]

ink = [
  "polymesh-api-codegen/ink",
]

no_std = [
  "polymesh-api-codegen/no_std",
]

std = [
  "polymesh-api-codegen/std",
  "polymesh-api-client?/std",
]

v14 = [
  "polymesh-api-codegen/v14",
  "polymesh-api-client?/v14",
]
