[package]
name = "polymesh-api-codegen"
version = "2.0.2"
edition = "2021"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
license = "Apache-2.0"
description = "Polymesh API Codegen"
keywords = ["polymesh", "blockchain", "substrate", "codegen"]
repository = "https://github.com/PolymeshAssociation/polymesh-api"
homepage = "https://github.com/PolymeshAssociation/polymesh-api"
exclude = ["/examples", "*.sh"]

[dependencies]
thiserror = "1.0.31"
log = "0.4"
hex = "0.4"

heck = "0.4"

proc-macro2 = "1"
quote = "1"

serde = "1.0"
serde-big-array = "0.4.1"

sp-core-hashing = { version = "10.0", default-features = false }
frame-metadata = { version = "15.0.0", default-features = false }
codec = { version = "3", package = "parity-scale-codec", default-features = false }
scale-info = { version = "2.3", default-features = false }
indexmap = "1.9.1"

[dev-dependencies]
anyhow = "1"
log = "0.4"
dotenv = "0.15"
env_logger = "0.9"

lazy_static = "1.4.0"
async-trait = "0.1"

tokio = { version = "1.19", features = ["full"] }
polymesh-api-client = { version = "2.0", path = "../polymesh-api-client", default-features = false, features = ["type_info"] }
rustfmt-wrapper = "0.2.0"

# substrate
sp-arithmetic = { version = "16.0", default-features = false }
sp-keyring = { version = "24.0.0", default-features = false }

[features]
default = [ "std", "serde", "v12", "v13", "v14" ]

serde = [
	"polymesh-api-client/serde",
]

ink = []

no_std = [
	"scale-info/decode",
	"frame-metadata/std",
]

v12 = [ "frame-metadata/v12", "polymesh-api-client/v12"]
v13 = [ "frame-metadata/v13", "polymesh-api-client/v13"]
v14 = [ "frame-metadata/v14", "polymesh-api-client/v14"]

std = [
	"frame-metadata/std",
	"sp-core-hashing/std",
	"scale-info/std",
	"polymesh-api-client/std",
]
