[package]
name = "polymesh-api-codegen"
version = "3.6.0"
edition = "2021"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
license = "Apache-2.0"
description = "Polymesh API Codegen"
keywords = ["polymesh", "blockchain", "substrate", "codegen"]
repository = "https://github.com/PolymeshAssociation/polymesh-api"
homepage = "https://github.com/PolymeshAssociation/polymesh-api"
exclude = ["/examples", "*.sh"]

[dependencies]
log = "0.4"
hex = "0.4"

indexmap = "1.9"
heck = "0.4"

proc-macro2 = "1"
quote = "1"

serde = { workspace = true }
serde-big-array = { workspace = true }

sp-core-hashing = { workspace = true, default-features = false }
frame-metadata = { workspace = true, default-features = false }
codec = { version = "3", package = "parity-scale-codec", default-features = false }
scale-info = { workspace = true, default-features = false }

[dev-dependencies]
anyhow = "1"
dotenv = "0.15"
env_logger = "0.9"

async-trait = "0.1"

tokio = { version = "1.19", features = ["full"] }
polymesh-api-client = { workspace = true, default-features = true }
rustfmt-wrapper = "0.2.0"

# substrate
sp-arithmetic = { workspace = true }
sp-keyring = { workspace = true }

[features]
default = [ "std", "serde", "v12", "v13", "v14" ]

serde = []

ink = []

no_std = [
	"scale-info/decode",
	"frame-metadata/std",
]

v12 = [ "frame-metadata/v12"]
v13 = [ "frame-metadata/v13"]
v14 = [ "frame-metadata/v14"]

std = [
	"frame-metadata/std",
	"sp-core-hashing/std",
	"scale-info/std",
]
