[package]
name = "polymesh-api-ink"
version = "0.4.2"
edition = "2021"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
license = "Apache-2.0"
description = "Polymesh Ink! API core"
keywords = ["polymesh", "ink", "blockchain", "substrate", "codegen"]
repository = "https://github.com/PolymeshAssociation/polymesh-api"
homepage = "https://github.com/PolymeshAssociation/polymesh-api"

[dependencies]
thiserror = "1.0.31"
log = "0.4"
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# substrate
sp-arithmetic = { version = "9.0", default-features = false }
sp-weights = { version = "8.0", default-features = false }
codec = { version = "3", package = "parity-scale-codec", default-features = false, features = ["full"] }
scale-info = { version = "=2.3", default-features = false, optional = true }
primitive-types = { version = "0.11.1", default-features = false, features = ["codec"] }

# Ink!
ink_primitives = { version = "3.0", default-features = false }
ink_metadata = { version = "3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0", default-features = false }
ink_storage = { version = "3.0", default-features = false }
ink_lang = { version = "3.0", default-features = false }
ink_lang_codegen = { version = "3.0", default-features = false }

[features]
default = [ "std" ]

std = [
  "sp-arithmetic/std",
  "sp-weights/std",
  "codec/std",
  "scale-info/std",
  "primitive-types/std",
  "ink_metadata/std",
  "ink_env/std",
  "ink_storage/std",
  "ink_primitives/std",
]
