[package]
name = "polymesh-api-ink"
version = "0.5.0"
edition = "2021"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
license = "Apache-2.0"
description = "Polymesh Ink! API core"
keywords = ["polymesh", "ink", "blockchain", "substrate", "codegen"]
repository = "https://github.com/PolymeshAssociation/polymesh-api"
homepage = "https://github.com/PolymeshAssociation/polymesh-api"

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# substrate
codec = { version = "3", package = "parity-scale-codec", default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
sp-weights = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, optional = true }
primitive-types = { workspace = true, default-features = false, features = ["codec"] }

# Ink!
ink_primitives = { workspace = true, default-features = false }
ink_metadata = { workspace = true, default-features = false, features = ["derive"], optional = true }
ink_env = { workspace = true, default-features = false }
ink_storage = { workspace = true, default-features = false }
ink_lang = { workspace = true, default-features = false }
ink_lang_codegen = { workspace = true, default-features = false }

[features]
default = [ "std" ]

std = [
  "sp-arithmetic/std",
  "sp-weights/std",
  "codec/std",
  "scale-info/std",
  "primitive-types/std",
  "ink_metadata/std",
  "ink_env/std",
  "ink_storage/std",
  "ink_primitives/std",
]
