[package]
name = "polymesh-api-ink"
version = "1.1.0"
edition = "2021"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
license = "Apache-2.0"
description = "Polymesh Ink! API core"
keywords = ["polymesh", "ink", "blockchain", "substrate", "codegen"]
repository = "https://github.com/PolymeshAssociation/polymesh-api"
homepage = "https://github.com/PolymeshAssociation/polymesh-api"

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# substrate
codec = { version = "3", package = "parity-scale-codec", default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
sp-weights = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, optional = true }
primitive-types = { workspace = true, default-features = false, features = ["codec"] }

# Ink!
ink = { workspace = true, default-features = false }

[features]
default = [ "std" ]

std = [
  "sp-arithmetic/std",
  "sp-weights/std",
  "codec/std",
  "scale-info/std",
  "primitive-types/std",
  "ink/std",
]
