[package]
name = "polymesh-offline-signer"
version = "0.1.0"
edition = "2021"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
license = "Apache-2.0"
description = "Polymesh offline signer CLI"
keywords = ["polymesh", "offline", "signer"]
repository = "https://github.com/PolymeshAssociation/polymesh-api"
homepage = "https://github.com/PolymeshAssociation/polymesh-api"

[dependencies]
anyhow = "1"
log = "0.4"
dotenv = "0.15"
env_logger = "0.9"

tokio = { version = "1.19", features = ["full"] }

serde_json = "1.0"

sp-core = { version = "21.0", default-features = false }
sp-keyring = "24.0.0"
subxt-signer = "0.31"
codec = { version = "3", package = "parity-scale-codec", default-features = false }

polymesh-api = { version = "2.2", path = "../../" }
hex = "0.4.3"
clap = { version = "4.4.3", features = ["derive"] }
rust_decimal = "1.32.0"
