[package]
name = "polymesh-offline-signer"
version = "0.3.2"
edition = "2021"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
license = "Apache-2.0"
description = "Polymesh offline signer CLI"
keywords = ["polymesh", "offline", "signer"]
repository = "https://github.com/PolymeshAssociation/polymesh-api"
homepage = "https://github.com/PolymeshAssociation/polymesh-api"

[dependencies]
anyhow = "1"
log = "0.4"
dotenv = "0.15"
env_logger = "0.9"
hex = "0.4.3"
clap = { version = "4.4.3", features = ["derive"] }
rust_decimal = "1.32.0"

tokio = { version = "1.19", features = ["full"] }

serde_json = { workspace = true }

sp-core = { workspace = true, default-features = false }
sp-keyring = { workspace = true }
subxt-signer = "0.33"
codec = { version = "3", package = "parity-scale-codec", default-features = false }

polymesh-api = { workspace = true, default-features = true }
