[package]
name = "add_secondary_keys_with_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
dotenv = "0.15"
env_logger = "0.11"

tokio = { version = "1.19", features = ["full"] }

serde_json = { workspace = true, features = ["preserve_order", "arbitrary_precision"] }

# substrate
sp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
codec = { version = "3", package = "parity-scale-codec", default-features = false }

polymesh-api = { workspace = true, default-features = true }
polymesh-api-client-extras = { workspace = true }
